2009-10-27  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        Provide a way to get counter values with layoutTestContoller
        https://bugs.webkit.org/show_bug.cgi?id=30555

        * Api/qwebframe.cpp:
        (QWebFrame::counterValueForElementById):
        (QWebHitTestResult::frame):
        * Api/qwebframe.h:

2009-10-28  Antonio Gomes  <tonikitoo@webkit.org>

        Pushing missing WebKit/qt/tests/qwebframe/resources/ dir from bug 29248.

        [Qt] [API] Make it possible to have 'invisible' loads
        https://bugs.webkit.org/show_bug.cgi?id=29248

        * tests/qwebframe/resources/image2.png: Copied from WebKit/qt/tests/qwebelement/image.png.

2009-10-28  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Tor Arne Vestbø.

        [Qt] QWebHistory::saveState() is inconsistent with the Qt API
        https://bugs.webkit.org/show_bug.cgi?id=30710

        Make the versioning internal and enforce it in the WebCore
        part. Adjust the comments, as well as remove now dead code.

        * Api/qwebhistory.cpp:
        (operator<<):
        (operator>>):
        * Api/qwebhistory.h:

2009-10-28  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Holger Freyther.

        [Qt] QWebHistory::saveState() is inconsistent with the Qt API
        https://bugs.webkit.org/show_bug.cgi?id=30710

        Remove the QWebHistory::saveState() and ::restoreState() as
        they are inconsistent with the Qt API.

        Update unittests to reflect the change.

        * Api/qwebhistory.cpp:
        (operator<<):
        (operator>>):
        * Api/qwebhistory.h:
        * tests/qwebhistory/tst_qwebhistory.cpp:
        (saveHistory):
        (restoreHistory):
        (tst_QWebHistory::saveAndRestore_crash_1):
        (tst_QWebHistory::saveAndRestore_crash_2):
        (tst_QWebHistory::saveAndRestore_crash_3):
        (tst_QWebHistory::clear):

2009-10-27  Antonio Gomes  <tonikitoo@webkit.org>